@@ -3,13 +3,13 @@
     "donate_url": "https://paypal.me/lucchetto",
     "website_url": "https://revengeos.com/",
     "news_url": "https://t.me/RevengeOSNews",
-    "datetime": 1618316859.2737908,
-    "filename": "RevengeOS-4.0-R-OFFICIAL-bretzel-20210413-1153.zip",
+    "datetime": 1621102690.9957445,
+    "filename": "RevengeOS-4.0-R-OFFICIAL-bretzel-20210515-1258.zip",
     "id": "",
-    "size": "625222987",
-    "url": "https://sourceforge.net/projects/revengeos/files/bretzel/RevengeOS-4.0-R-OFFICIAL-bretzel-20210413-1153.zip",
+    "size": "625953252",
+    "url": "https://sourceforge.net/projects/revengeos/files/bretzel/RevengeOS-4.0-R-OFFICIAL-bretzel-20210515-1258.zip",
     "download_new": "https://download.revengeos.com/download/bretzel",
     "clean_flash": "no",
     "version": "4.0",
-    "filehash": "829861250ad7c354ff8a28e7f3114ea8"
+    "filehash": "9bd4811a6106e8abbfe3903a4bbfe7b4"
 }
